# FruitNAI

./: .gitignore  README.en.md  README.md  environment.yml  pyproject.toml  requirements.txt
data/: classes.txt
models/runs/fruitninja_yolo11n/: args.yaml  results.csv
models/runs/fruitninja_yolo11n2/: args.yaml  results.csv
models/runs/fruitninja_yolo11n3/: args.yaml  results.csv
notebooks/: 1_split_data.ipynb  2_visualize_images.ipynb  3_dataset_ultralytics.ipynb  4_train_yolo.ipynb  dataset_ultralytics.ipynb  eval_train.ipynb  extra_train_manual.ipynb  split_data.ipynb  train_yolo.ipynb  visualize_images.ipynb
src/: indexer.py  ultralytics_builder.py  yolo_dataset.py
src/bot/: capture.py  controller.py  logger.py  predictor.py  run.py  state.py  ui.py
