[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fruitnai"
version = "0.1.0"
description = "Fruit Ninja bot powered by vision ML."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Gabriel Lima" },
]

[project.scripts]
fruitnai-bot = "bot.ui:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["bot*"]